k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging-crzgames-website-backend-deployment
  namespace: staging-crzgames-website-backend
  labels:
    app: staging-crzgames-website-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: staging-crzgames-website-backend
  template:
    metadata:
      labels:
        app: staging-crzgames-website-backend
    spec:
      containers:
        - name: staging-crzgames-website-backend
          image: corentin35/crzgames-website-backend:staging-${TAG_VERSION}
          imagePullPolicy: Always
          ports:
            - containerPort: 3333
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
      imagePullSecrets:
        - name: regcred
