k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-crzgames-website-backend-ingress
  namespace: staging-crzgames-website-backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: "0" # ou "0" pour illimité
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - staging.api.crzgames.com
      secretName: staging-crzgames-website-backend-tls
  rules:
    - host: staging.api.crzgames.com
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: staging-crzgames-website-backend-service
                port:
                  number: 3333
